--- a/XamarinOffline.Android/TodoOffline.Android/TodoOffline.Android.csproj
+++ b/XamarinOffline.Android/TodoOffline.Android/TodoOffline.Android.csproj
@@ -94,7 +94,7 @@
     <Reference Include="System.Net.Http" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="ConflictSyncHandler.cs" />
+    <Compile Include="SyncHandler.cs" />
     <Compile Include="Resources\Resource.designer.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ToDoActivity.cs" />
