--- a/.gitignore
+++ b/.gitignore
@@ -35,7 +35,6 @@ dlldata.c
 *.ilk
 *.meta
 *.obj
-*.pch
 *.pdb
 *.pgc
 *.pgd
@@ -173,14 +172,22 @@ UpgradeLog*.htm
 # Microsoft Fakes
 FakesAssemblies/
 
-*.pbxproj
-
-*.xcworkspacedata
-
+# Xcode
+#
+build/
+*.pbxuser
+!default.pbxuser
+*.mode1v3
+!default.mode1v3
+*.mode2v3
+!default.mode2v3
+*.perspectivev3
+!default.perspectivev3
+xcuserdata
 *.xccheckout
-
+*.moved-aside
+DerivedData
+*.hmap
+*.ipa
 *.xcuserstate
 
-*.xcbkptlist
-
-*.xcscheme
